# toollab

./: README.md  main.aux  main.bib  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  paper_summary.md  pyproject.toml  table-paper-metrics.fdb_latexmk  table-paper-metrics.fls
experiments/: consumer_choice_fixed_matrix.yaml  health_insurance_choice.yaml  political_general_election.yaml
mouselab/Accounting & Corporate Finance/: Does_Search_Facilitating_Technology_Impr.md
mouselab/Consumer Behavior & Marketing/: Adaptive Strategy Selection in Decision Making.md
mouselab/Emotion & Moral Psychology/: Choice Processing in Emotionally Difficult Decisions.md
mouselab/Game Theory & Behavioral Economics/: Detecting Failures of Backward Induction: Monitoring Information Search in Sequential Bargaining.md
mouselab/Healthcare Economics & Public Policy/: Can Consumers Make Affordable Care Affordable.md  dellaert-et-al-2022-choice-architecture-for-healthier-insurance-decisions-ordering-and-partitioning-together-can.md
mouselab/Political Science & Voting Behavior/: how voters decide.md
mouselab/Social Psychology & Intergroup Bias/: Looking the Part: Social Status Cues Shape Race Perception.md
sections/: conclusion.tex  discussion.tex  experiment-1.tex  experiment-2.tex  experiment-3.tex  introduction.tex  methodology.tex  related-works.tex  table-measures.tex  table-mouselab.tex  table-paper-metrics.aux  table-paper-metrics.bbl  table-paper-metrics.blg  table-paper-metrics.fdb_latexmk  table-paper-metrics.fls  table-paper-metrics.out  table-paper-metrics.tex
(+22 files in other folders)
